--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             </div>
         </div>
         <div class="proyecto">
-            <img src="nueva-imagen.jpg" alt="Nuevo proyecto">
+            <img src="imagen3.jpg" alt="Proyecto 3"> <!-- Cambia la ruta de la imagen -->
             <div class="proyecto-info">
-                <h3>Nombre del proyecto</h3>
-                <p>Descripción.</p>
+                <h3>Proyecto 3</h3>
+                <p>Proyecto solar 5Kw - Mantenimiento Jamundi Medicion y Pruebas.</p>
             </div>
         </div>
         <!-- Añade más proyectos aquí -->
@@ -107,9 +107,9 @@
     </footer>
 </body>
 </html>
-<section id="contacto">
-    <h2>Contacto</h2>
-    <form action="https://formsubmit.co/tu-email@gmail.com" method="POST">
+<section id=  "contacto">
+    <h2>Contacto  </h2>
+    <form action=  "https://formsubmit.co/tu-email@gmail.com" method="POST">
         <input type="hidden" name="_captcha" value="false">
         <input type="text" name="name" placeholder="Nombre" required>
         <input type="email" name="email" placeholder="Email" required>
